Fix T51920: Invalidate draw cache when changing object origin